--- a/jadi satu/src/jadi/Login.form
+++ b/jadi satu/src/jadi/Login.form
@@ -88,7 +88,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="14" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Login dulu cuuy.."/>
+        <Property name="text" type="java.lang.String" value="Login dulu.."/>
       </Properties>
     </Component>
     <Component class="javax.swing.JPasswordField" name="jPasswordField1">
